Default layout updated to match hackathon

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,15 +25,14 @@
 
 	<body id="top">
     <header id="header">
-      <a href="{{ site.url }}" class="image avatar"><img class="editable" src="/images/avatar.jpg" alt="{{ site.author.name }}"></a>
-      <h1 class="editable"><strong>I am <a href="/">Strata Reloaded</a></strong>, a super simple<br>
-      responsive site template freebie<br>
-      adapted by <a href="http://comfusionllc.com">Comfusion LLC</a>.</h1>
+      <a href="{{ site.url }}" class="image avatar"><img class="editable" src="/images/oss-software-hackathon.png" alt="{{ site.author.name }}"></a>
+      <h1 class="editable"><strong>The <a href="/">Open Source Security Software Hackathon</a> is a 2-days open hackathon to bring people and open source security software/tools together.</h1>
     </header>
 
     {{ content }}
 
     <footer id="footer">
+            <h2 class="editable"><a href=""></a>|<a href="/team">Projects</a></h2>
       <p class="editor-link"><a href="cloudcannon:collections/_data/social.yml" class="button"><strong>&#9998;</strong> Update Social Icons</a></p>
       <ul class="icons">
         {% for account in site.data.social %}
@@ -52,9 +51,7 @@
         {% endif %}
       </ul>
       <ul class="copyright">
-          <li>&copy; Untitled</li>
-          <li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-          <li>Theme: <a href="http://comfusionllc.com">Comfusion LLC</a></li>
+              <li><a href="https://www.hack.lu/">hack.lu</a></li>
       </ul>
     </footer>
 
