--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,12 +27,13 @@
     <header id="header">
       <a href="{{ site.url }}" class="image avatar"><img class="editable" src="/images/oss-software-hackathon.png" alt="{{ site.author.name }}"></a>
       <h1 class="editable"><strong>The <a href="/">Open Source Security Software Hackathon</a> is a 2-days open hackathon to bring people and open source security software/tools together.</h1>
+      <h2 class="editable">2-3 May 2017 in Luxembourg.</h2>
     </header>
 
     {{ content }}
 
     <footer id="footer">
-            <h2 class="editable"><a href=""></a>|<a href="/team">Projects</a></h2>
+            <h2 class="editable"><a href="/">About</a> | <a href="/team">Projects</a></h2>
       <p class="editor-link"><a href="cloudcannon:collections/_data/social.yml" class="button"><strong>&#9998;</strong> Update Social Icons</a></p>
       <ul class="icons">
         {% for account in site.data.social %}
