--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,7 +33,7 @@
     {{ content }}
 
     <footer id="footer">
-            <h2 class="editable"><a href="/">About</a> | <a href="/team">Projects</a></h2>
+            <h3 class="editable"><a href="/">About</a> | <a href="/team">Projects</a> | <a href="/practical">Practical</a></h3>
       <p class="editor-link"><a href="cloudcannon:collections/_data/social.yml" class="button"><strong>&#9998;</strong> Update Social Icons</a></p>
       <ul class="icons">
         {% for account in site.data.social %}
