chg: [menu] fixed

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,8 +26,8 @@
 	<body id="top">
     <header id="header">
       <a href="{{ site.url }}" class="image avatar"><img class="editable" src="/images/oss-software-hackathon.png" alt="{{ site.author.name }}"></a>
-      <h1 class="editable"><strong>The <a href="/">Open Source Security Software Hackathon 0x3</a> is a 1-day open hackathon to bring people and open source security software/tools together.</h1>
-      <h2 class="editable">26 March 2018 in Luxembourg.</h2>
+      <h1 class="editable"><strong>The <a href="/">Open Source Security Software Hackathon 0x4</a> is a 2-day virtual open hackathon to bring people and open source security software/tools together.</h1>
+      <h2 class="editable">26-27 August 2020 in Cyberspace.</h2>
     </header>
 
     {{ content }}
